--- a/dairy-backend /package.json
+++ b/dairy-backend /package.json
@@ -1,9 +1,13 @@
+
+
+
 {
-  "name": "dairy-backend-",
+  "name": "dairy-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
     "dev": "nodemon src/server.js"
   },
   "keywords": [],
